# Skald

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  Skald_implementation_plan.md  VoxLine_implementation_plan.md  findings.md  findings_prompt.md  justfile
.github/workflows/: ci.yml  release.yml
config-example/: README.md
config-example/linux/: config.toml
config-example/linux/snippets/: signature.md  signature.toml  standup.md  standup.toml
config-example/linux/styles/: default.md  professional.md  professional.toml
config-example/mac/: README.md
config-example/windows/: README.md
crates/skald-cli/: Cargo.toml
crates/skald-cli/src/: apps_cmd.rs  calibration_cmd.rs  cleanup_cmd.rs  commands_cmd.rs  main.rs  models_cmd.rs  secrets_cmd.rs  service.rs  setup_cmd.rs  snippets_cmd.rs  styles_cmd.rs
crates/skald-core/: Cargo.toml  build.rs
crates/skald-core/assets/apps/: terminal.toml
crates/skald-core/assets/styles/: default.md  default.toml
crates/skald-core/src/: apps.rs  build_info.rs  cleanup.rs  client.rs  commands.rs  config.rs  desktop.rs  diagnostics.rs  download.rs  lib.rs  models.rs  paths.rs  protocol.rs  routing.rs  runtime.rs  secrets.rs  service.rs  setup.rs  snippet_templates.rs  snippets.rs  styles.rs  support_bundle.rs  system_probe.rs  vocabulary.rs
crates/skald-overlay/: Cargo.toml
crates/skald-overlay/src/: main.rs
crates/skald-platform/: Cargo.toml
crates/skald-platform/src/: lib.rs
crates/skald-tray/: Cargo.toml
crates/skald-tray/src/: main.rs
crates/skaldd/: Cargo.toml
crates/skaldd/src/: asr.rs  audio.rs  bench.rs  cleanup.rs  delivery.rs  diagnostics.rs  dictation.rs  injection.rs  ipc.rs  jobs.rs  main.rs  openrouter.rs  preview.rs  preview_asr.rs  template_extract.rs
crates/voxline-cli/: Cargo.toml
crates/voxline-cli/src/: apps_cmd.rs  cleanup_cmd.rs  commands_cmd.rs  main.rs  secrets_cmd.rs  service.rs  setup_cmd.rs  snippets_cmd.rs  styles_cmd.rs
crates/voxline-core/: Cargo.toml
crates/voxline-core/src/: apps.rs  cleanup.rs  client.rs  commands.rs  config.rs  download.rs  lib.rs  models.rs  paths.rs  preview.rs  protocol.rs  routing.rs  runtime.rs  secrets.rs  service.rs  setup.rs  snippet_templates.rs  snippets.rs  styles.rs  system_probe.rs  text.rs
crates/voxline-overlay/: Cargo.toml
crates/voxline-overlay/src/: main.rs
crates/voxline-platform/: Cargo.toml
crates/voxline-platform/src/: lib.rs
crates/voxlined/: Cargo.toml
crates/voxlined/src/: asr.rs  audio.rs  bench.rs  cleanup.rs  delivery.rs  dictation.rs  injection.rs  ipc.rs  jobs.rs  main.rs  openrouter.rs  preview.rs  preview_asr.rs  template_extract.rs
docs/: README.md  astro.config.ts  package.json  wrangler.toml
docs/src/content/docs/: cli.md  index.mdx  install.md  service.md  setup.md  troubleshooting.md
docs/src/content/docs/configuration/: asr.md  audio.md  cleanup.md  daemon.md  diagnostics.md  index.md  injection.md  notifications.md  overlay.md  paths.md  preview.md  privacy.md  related-files.md  secrets.md  vocabulary.md  voice-commands.md
docs/src/content/docs/linux/: benchmarks.md  desktop-matrix.md  releases.md  tray.md  waybar.md
docs/src/styles/: custom.css
scripts/: release-checklist  release-notes  release-package  release-smoke
