[package]
name = "skald-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "skald"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ulid.workspace = true
skald-core = { path = "../skald-core" }
skald-platform = { path = "../skald-platform" }
dialoguer.workspace = true
indicatif.workspace = true
cpal.workspace = true

[lints]
workspace = true
