[package]
name = "skald-tray"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "skald-tray"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ksni = "0.3.5"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
skald-core = { path = "../skald-core" }

[lints]
workspace = true
