[package]
name = "voxline-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "voxline"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ulid.workspace = true
voxline-core = { path = "../voxline-core" }
voxline-platform = { path = "../voxline-platform" }

[lints]
workspace = true

