[package]
name = "voxline-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust", "apple-native", "windows-native"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
ulid.workspace = true

[lints]
workspace = true

