[package]
name = "voxline-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
tokio = { workspace = true, features = ["fs", "rt", "macros"] }
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust", "apple-native", "windows-native"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
ulid.workspace = true
reqwest.workspace = true
tracing.workspace = true
sha2 = "0.11.0"
rustix = { version = "1.1.4", default-features = false, features = ["std", "process", "fs"] }

[lints]
workspace = true

