[package]
name = "voxline-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "voxline-overlay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
gtk4-layer-shell = "0.8"
gtk = { package = "gtk4", version = "0.11", features = ["v4_14"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
voxline-core = { path = "../voxline-core" }
voxline-platform = { path = "../voxline-platform" }

[lints]
workspace = true
